[gd_scene load_steps=17 format=3 uid="uid://bvjmp1skspd2m"]

[ext_resource type="PackedScene" uid="uid://31dxe106neto" path="res://player/player.tscn" id="1_5a0w1"]
[ext_resource type="Script" path="res://levels/level.gd" id="1_hrodq"]
[ext_resource type="PackedScene" uid="uid://cq61d13iqc062" path="res://obstacles/obstacle_spawner.tscn" id="2_24k8o"]
[ext_resource type="AudioStream" uid="uid://ckq7qn6go182f" path="res://levels/audio/button_clicked_sound.ogg" id="2_6082k"]
[ext_resource type="PackedScene" uid="uid://dw5gm0met1k0c" path="res://backgrounds/parallax_scrolling_scene.tscn" id="3_21dg8"]
[ext_resource type="PackedScene" uid="uid://v5qh65aax1xy" path="res://UI/upgrade_popup.tscn" id="3_70x4p"]
[ext_resource type="AudioStream" uid="uid://c1k83j4yc2k4u" path="res://levels/audio/level_loaded_sound.ogg" id="3_hsru8"]
[ext_resource type="PackedScene" uid="uid://d8xrnob8i15r" path="res://UI/hud.tscn" id="4_64i7p"]
[ext_resource type="AudioStream" uid="uid://clndfmjgikmqs" path="res://levels/audio/soundtrack.ogg" id="4_pn4bc"]
[ext_resource type="PackedScene" uid="uid://b5s4k7dtq4xy7" path="res://enemies/enemy_spawner.tscn" id="5_nfb7c"]
[ext_resource type="PackedScene" uid="uid://0uv3q6ylqes0" path="res://pickups/xp/xp_spawner.tscn" id="6_ac72y"]
[ext_resource type="Theme" uid="uid://blnoseh1kub1y" path="res://UI/buttons/button_theme.tres" id="6_vuuf4"]
[ext_resource type="PackedScene" uid="uid://d0gynaifufxo8" path="res://pickups/upgrades/upgrade_spawner.tscn" id="8_ysjd3"]
[ext_resource type="PackedScene" uid="uid://bl61xpq88yaf2" path="res://enemies/set_pieces/set_piece_spawner.tscn" id="13_egcnq"]
[ext_resource type="PackedScene" uid="uid://b2mtu1tctk2bh" path="res://UI/settings_window.tscn" id="14_qo3ix"]

[sub_resource type="Environment" id="Environment_p14cu"]
background_mode = 3
glow_normalized = true
glow_intensity = 1.5
glow_strength = 0.8
glow_bloom = 0.02
glow_blend_mode = 0
glow_hdr_threshold = 0.9
glow_hdr_luminance_cap = 1.6
fog_light_energy = 16.0

[node name="Level01" type="Node2D"]
process_mode = 1
script = ExtResource("1_hrodq")
level_name = "main_menu"

[node name="GlobalLight" type="DirectionalLight2D" parent="."]
energy = 0.4
blend_mode = 1
range_layer_min = -100
range_layer_max = -5

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_p14cu")

[node name="LevelOneCam" type="Camera2D" parent="."]
enabled = false

[node name="LevelAudio" type="Node" parent="."]
process_mode = 1

[node name="BeginSceneChangeAudio" type="AudioStreamPlayer2D" parent="LevelAudio"]
unique_name_in_owner = true
stream = ExtResource("2_6082k")
panning_strength = 0.0
bus = &"LevelLoad"

[node name="LevelLoadedAudio" type="AudioStreamPlayer2D" parent="LevelAudio"]
unique_name_in_owner = true
stream = ExtResource("3_hsru8")
panning_strength = 0.0
bus = &"LevelLoad"

[node name="Music" type="AudioStreamPlayer2D" parent="LevelAudio"]
process_mode = 3
position = Vector2(50, -26)
stream = ExtResource("4_pn4bc")
autoplay = true
bus = &"Music"

[node name="ScalingInfo" type="Node2D" parent="."]

[node name="DifficultyScalingTimer" type="Timer" parent="ScalingInfo"]
wait_time = 30.0
autostart = true

[node name="HUDCanvas" type="CanvasLayer" parent="."]

[node name="HUD" parent="HUDCanvas" node_paths=PackedStringArray("player_character", "level", "difficulty_scaling_timer") instance=ExtResource("4_64i7p")]
player_character = NodePath("../../Player")
level = NodePath("../..")
difficulty_scaling_timer = NodePath("../../ScalingInfo/DifficultyScalingTimer")
metadata/_edit_use_anchors_ = true

[node name="ChangeSceneButton" type="Button" parent="HUDCanvas"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -34.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("6_vuuf4")
theme_override_font_sizes/font_size = 8
disabled = true
text = "MAINMENU"

[node name="UpgradePopup" parent="HUDCanvas" instance=ExtResource("3_70x4p")]
offset_left = 4.0
offset_right = 92.0

[node name="SettingsWindow" parent="." instance=ExtResource("14_qo3ix")]
visible = false

[node name="Player" parent="." node_paths=PackedStringArray("hud") instance=ExtResource("1_5a0w1")]
position = Vector2(0, 150)
rotation = -1.5708
hud = NodePath("../HUDCanvas/HUD")

[node name="EnemySpawner" parent="." instance=ExtResource("5_nfb7c")]
position = Vector2(-320, -204)

[node name="obstacle_spawner" parent="." instance=ExtResource("2_24k8o")]
position = Vector2(-320, -204)
current_obstacle_speed = 80
obstacle_spawn_cooldown = 3

[node name="ParallaxScrollingScene" parent="." instance=ExtResource("3_21dg8")]

[node name="XPSpawner" parent="." instance=ExtResource("6_ac72y")]

[node name="UpgradeSpawner" parent="." node_paths=PackedStringArray("player") instance=ExtResource("8_ysjd3")]
position = Vector2(0, -180)
player = NodePath("../Player")

[node name="SetPieceSpawner" parent="." instance=ExtResource("13_egcnq")]
position = Vector2(-320, -180)

[connection signal="loading_level" from="." to="SettingsWindow" method="_on_level_loading"]
[connection signal="timeout" from="ScalingInfo/DifficultyScalingTimer" to="." method="_on_difficulty_scaling_timer_timeout"]
[connection signal="score_increased" from="HUDCanvas/HUD" to="." method="_on_hud_score_increased"]
[connection signal="pressed" from="HUDCanvas/ChangeSceneButton" to="." method="_on_button_pressed"]
[connection signal="player_health_updated" from="Player" to="HUDCanvas/HUD" method="_on_player_player_health_updated"]
[connection signal="player_killed" from="Player" to="." method="_on_player_player_killed"]
[connection signal="player_max_health_updated" from="Player" to="HUDCanvas/HUD" method="_on_player_player_max_health_updated"]
[connection signal="upgrade_added_or_upgraded" from="Player" to="HUDCanvas/HUD" method="_on_player_upgrade_added_or_upgraded"]
[connection signal="upgrade_added_or_upgraded" from="Player" to="HUDCanvas/UpgradePopup" method="_on_player_upgrade_added_or_upgraded"]
