[gd_scene load_steps=6 format=3 uid="uid://c2vhykllndjg6"]

[ext_resource type="Script" path="res://levels/Scenes/WinScreenControl.gd" id="1_01bcx"]
[ext_resource type="Script" path="res://levels/level.gd" id="1_snb2d"]
[ext_resource type="Texture2D" uid="uid://b4w4i485t05ij" path="res://levels/MainMenuBackground.png" id="2_vgiyl"]
[ext_resource type="AudioStream" uid="uid://ckq7qn6go182f" path="res://levels/audio/button_clicked_sound.ogg" id="4_ms1sf"]
[ext_resource type="AudioStream" uid="uid://c1k83j4yc2k4u" path="res://levels/audio/level_loaded_sound.ogg" id="5_eam31"]

[node name="LevelWinScreen" type="Node2D"]
script = ExtResource("1_snb2d")
level_name = "main_menu"

[node name="WinScreenControl" type="Control" parent="." node_paths=PackedStringArray("level")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_01bcx")
level = NodePath("..")

[node name="TextureRect" type="TextureRect" parent="WinScreenControl"]
layout_mode = 0
offset_left = -322.0
offset_top = -180.0
offset_right = 321.0
offset_bottom = 181.0
texture = ExtResource("2_vgiyl")

[node name="Score" type="Label" parent="WinScreenControl/TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.5
offset_top = 65.0
offset_right = 30.5
offset_bottom = 92.0
grow_horizontal = 2
text = "Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Highscore" type="Label" parent="WinScreenControl/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.5
offset_top = -57.5
offset_right = 50.5
offset_bottom = -30.5
grow_horizontal = 2
grow_vertical = 2
text = "HIGHSCORE
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChangeSceneButton" type="Button" parent="WinScreenControl/TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -119.5
offset_top = -114.0
offset_right = 117.5
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 0
disabled = true
text = "MAIN MENU"

[node name="BeginSceneChangeAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_ms1sf")

[node name="LevelLoadedAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_eam31")

[connection signal="pressed" from="WinScreenControl/TextureRect/ChangeSceneButton" to="." method="_on_change_scene_button_pressed"]
